--- a/package.json
+++ b/package.json
@@ -37,13 +37,10 @@
     "lint:markdown": "markdownlint \"**/*.md\" --ignore \"**/node_modules/**\"",
     "lint:package-json": "yarn run format:package-json --check",
     "lint:prettier": "prettier \"**/*.{css,html,js,cjs,mjs,json,less,md,scss,ts,vue,yaml,yml}\" --check",
-    "test": "ava",
-    "test-coverage": "c8 ava",
+    "test": "uvu",
+    "test-coverage": "c8 yarn test",
     "release": "run-s clean build format test dist",
     "prepare": "husky install"
-  },
-  "ava": {
-    "verbose": true
   },
   "c8": {
     "reporter": [
@@ -70,7 +67,8 @@
     "markdownlint-cli": "0.30.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.5.1",
-    "sort-package-json": "1.53.1"
+    "sort-package-json": "1.53.1",
+    "uvu": "0.5.2"
   },
   "publishConfig": {
     "access": "public",
